--- a/scss/style.css
+++ b/scss/style.css
@@ -305,28 +305,60 @@ template {
   display: none; }
 
 body {
-  background-color: #ddd;
+  background-color: #fff;
   padding: 32px;
   font-family: 'Roboto Slab', serif; }
 
 .tags {
   position: relative;
-  background-color: #000;
-  border-radius: 16px; }
-  .tags__btn {
+  background-color: #999;
+  border-radius: 16px;
+  box-shadow: inset 0px 0px 5px #999; }
+  .tags__field {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
+  .tags__tag {
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    background-color: #999;
+    background-color: #fc0;
     font-size: 32px;
     border-radius: 16px;
-    border: #888 1px solid;
-    transition: all .2s; }
-  .tags__btn_active {
-    background-color: #fc0; }
-  .tags__btn:hover {
-    background-color: #888; }
+    border: #999 1px solid;
+    transition: all .1s;
+    color: #999; }
+  .tags__tag_active {
+    color: #000; }
+    .tags__tag_active:hover {
+      cursor: pointer; }
+  .tags__message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    border-radius: 16px;
+    z-index: 3; }
+
+.btn {
+  background-color: #fc0;
+  border: 0;
+  padding: 8px 12px;
+  margin-top: 8px;
+  border-radius: 4px; }
+  .btn:hover {
+    cursor: pointer;
+    transform: scale(1.05); }
 
 /*# sourceMappingURL=style.css.map */
